--- a/src/app/reviews/customer-review-list/customer-review-list.component.html
+++ b/src/app/reviews/customer-review-list/customer-review-list.component.html
@@ -3,7 +3,8 @@
 <ul class="messages">
 
   <li *ngFor="let i of reviews" >
-    <img src="images/img.jpg" class="avatar" alt="Avatar">
+
+    <img src="../../../assets/Images/user.png" class="avatar" alt="Avatar">
     <!-- <div class="message_date">
       <h3 class="date text-info">24</h3>
       <p class="month">May</p>
