--- a/src/app/Layouts/assigned/assigned.component.html
+++ b/src/app/Layouts/assigned/assigned.component.html
@@ -5,7 +5,9 @@
           <div class="col-md-3 left_col">
             <div class="left_col scroll-view">
               <div class="navbar nav_title" style="border: 0;">
-                <a href="mgr.html" class="site_title"><img src="images/crext2.png"></a>
+                <a href="mgr.html" class="site_title">
+                    <img src="assets/Images/CREXTwhite.png" height="40">
+                </a>
               </div>
 
               <div class="clearfix"></div>
@@ -33,7 +35,9 @@
                     <li><a [routerLink]="['/Assigned/reminders', 'true']"><i class="fa fa-reply"></i>Reminder<span class="badge bg-red">{{remiderCount}}</span></a> </li>
                     <li> <a [routerLink]="['/Assigned/payments', 'true']"><i class="fa fa-usd"></i>Due Payment <span class="badge bg-orange">{{duePaymentCount}}</span></a>  </li>
                     <li> <a [routerLink]="['/Assigned/Reschedule', 'true']"><i class="fa fa-recycle"></i>Reschedule <span class="badge bg-orange">{{rescheduleCount}}</span></a>  </li>
-                    <li> <a routerLink='/Assigned'><i class="fa fa-arrow-circle-up"></i>Updates <span class="badge bg-orange">{{rescheduleCount}}</span></a>  </li>
+                    <li> <a [routerLink]="['/Assigned/query', organisationId]"><i class="fa fa-arrow-circle-up"></i>Updates <span class="badge bg-orange"></span></a>  </li>
+                    <li> <a href="#" (click)="logout()"><i class="fa fa-signout"></i>Logout </a>  </li>
+
                   </ul>
                 </div>
 
@@ -220,8 +224,10 @@
           </div>
 
 
+  <router-outlet></router-outlet>
 
-              <router-outlet></router-outlet>
+
+
 
 
         </div>
