--- a/src/app/Layouts/cst/cst.component.html
+++ b/src/app/Layouts/cst/cst.component.html
@@ -5,7 +5,9 @@
           <div class="col-md-3 left_col">
             <div class="left_col scroll-view">
               <div class="navbar nav_title" style="border: 0;">
-                <a href="mgr.html" class="site_title"><img src="images/crext2.png"></a>
+                <a href="#" class="site_title">
+                    <img src="assets/Images/CREXTwhite.png" height="40">
+                </a>
               </div>
 
               <div class="clearfix"></div>
