--- a/src/app/Layouts/login-layout/login-layout.component.html
+++ b/src/app/Layouts/login-layout/login-layout.component.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Crtx login_form | </title>
+    <title> Crtx login form | </title>
   </head>
 
   <body class="login">
@@ -14,7 +14,7 @@
 
       <div class="login_wrapper">
         <div class="animate form login_form">
-          <h1>Loging working</h1>
+
           <router-outlet></router-outlet>
 
         </div>
