--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,4 +1,5 @@
 <section class="login_content">
+
   <img class="img-fluid float-right" width="30" height="30"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
 
   <div class="well center-div">
@@ -24,15 +25,15 @@
       <div class="clearfix"></div>
 
       <div class="separator">
-        <p class="change_link">New to site?
+        <p class="change_link">
 
 
         <div class="clearfix"></div>
         <br />
 
         <div>
-          <h1><i class="fa fa-paw"></i> Capital X</h1>
-          <p>©2016 All Rights Reserved. Captial X! Privacy and Terms</p>
+          <h1>  <img src="assets/Images/crextlogo1.png" height="30" /> </h1>
+          <p> All Rights Reserved. Crext! Privacy and Terms</p>
         </div>
       </div>
       </form>
