--- a/src/app/components/client-view/client-view.component.html
+++ b/src/app/components/client-view/client-view.component.html
@@ -1,3 +1,41 @@
-<p>
-  client-view works!
-</p>
+
+<div class="right_col" role="main" style="min-height: 799px;">
+    <!-- top tiles -->
+    <div class="row tile_count">
+
+
+
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top"><i class="fa fa-reply"></i> Total Reschedule </span>
+        <div class="count">{{rescheduleCount}}</div>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top"><i class="fa fa-usd"></i> Due Payments</span>
+        <div class="count">{{duePaymentCount}}</div>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top"><i class="fa fa-usd"></i> Reminders</span>
+        <div class="count">{{remiderCount}}</div>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+        <span class="count_top"><i class="fa fa-recycle"></i>  Baskets </span>
+        <div class="count">{{projectCount}}</div>
+      </div>
+    </div>
+    <!-- /top tiles -->
+    <div class= "well">
+      <h4>Recent Activity</h4>
+      <app-recent-list [OrganisationId]= "orgainisationId" *ngIf="orgainisationId != null"  ></app-recent-list>
+    </div>
+  <!-- /page content -->
+
+  <!-- footer content -->
+  <footer>
+    <div class="pull-right">
+      CREXT DRD
+    </div>
+    <div class="clearfix"></div>
+  </footer>
+  <!-- /footer content -->
+  </div>
+
