--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,56 +1,62 @@
-<p>
-  team-list works!
-</p>
-<div class="col-md-12 col-sm-12 col-xs-12">
-  <div class="x_panel">
-      <img class="img-fluid float-right"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
+<div class="right_col" role="main" style="min-height: 799px;">
 
-    <div class="x_title">
-      <h2>All Projects</h2>
+<DIV CLASS="row">
+  <div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="x_panel">
+        <img class="img-fluid float-right"  *ngIf="loading" src="../../../assets/ajax/loader.gif" >
 
-      <div class="clearfix"></div>
-    </div>
+      <div class="x_title">
+        <h2>All Projects</h2>
 
-    <div class="x_content">
+        <div class="clearfix">
 
-
-      <div class="table-responsive">
-        <table class="table table-striped jambo_table bulk_action">
-          <thead>
-            <tr class="headings">
-
-              <th class="column-title">Name </th>
-
-              <th class="column-title">Description </th>
-              <th class="column-title">Organisation Id</th>
-              <th>
-
-              </th>
-
-            </tr>
-          </thead>
-
-          <tbody>
-
-            <tr class="even pointer" *ngFor="let i of projects">
-
-              <td class=" ">{{i.name}}</td>
-
-              <td class=" "> {{i.description}} </td>
-              <td class=" ">{{i.organisationId}}</td>
-              <td>
-                 <a [routerLink]="['/'+routeUrl+'/customer/list', i.id]">view</a>
-                <!-- <a [routerLink]="['/${localStorage.getItem("routeUrl")}/customer/list/', i.id]"> view</a> -->
-
-              </td>
-
-            </tr>
-
-          </tbody>
-        </table>
+        </div>
       </div>
 
+      <div class="x_content">
 
+
+        <div class="table-responsive">
+          <table class="table table-striped jambo_table bulk_action">
+            <thead>
+              <tr class="headings">
+
+                <th class="column-title">Name </th>
+
+                <th class="column-title">Description </th>
+                <th class="column-title">Organisation Id</th>
+                <th>
+
+                </th>
+
+              </tr>
+            </thead>
+
+            <tbody>
+
+              <tr class="even pointer" *ngFor="let i of projects">
+
+                <td class=" ">{{i.name}}</td>
+
+                <td class=" "> {{i.description}} </td>
+                <td class=" ">{{i.organisationId}}</td>
+                <td>
+                   <a [routerLink]="['/'+routeUrl+'/customer/list', i.id]">view</a>
+                  <!-- <a [routerLink]="['/${localStorage.getItem("routeUrl")}/customer/list/', i.id]"> view</a> -->
+
+                </td>
+
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
+
+
+      </div>
     </div>
   </div>
+</DIV>
+
 </div>
+
