--- a/src/app/reviews/reminder-list/reminder-list.component.html
+++ b/src/app/reviews/reminder-list/reminder-list.component.html
@@ -4,13 +4,12 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
       <div class="x_panel">
         <div class="x_title">
-          <h2>Un Read Reminders</h2>
+          <h2>Unread Reminders</h2>
           <div class="clearfix"></div>
         </div>
 
         <div class="x_content">
 
-          <p>Add class <code>bulk_action</code> to table for bulk actions options on row select</p>
 
           <div class="table-responsive">
             <table id="datatable-responsive" class="table table-striped jambo_table bulk_action table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
